<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/registration_finished"
            android:textColor="@color/primary_text"
            android:fontFamily="sans-serif-medium"
            />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/background_finished_registration"
            android:padding="10dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_done_primary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/congratulations"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:text="@string/welcome_message"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="24dp"
            android:background="@color/divider"
            android:layout_marginRight="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textColor="@color/primary_text"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/continue_button"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="end"
            android:gravity="end|bottom"
            android:layout_marginRight="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</layout>