<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textSize="20sp"
            android:gravity="left"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/background_circle_primary"
            android:padding="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_exit_run_black_18dp"
            android:tint="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/confirm_exit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/secondary_text"
            android:text="@string/activity_not_finished"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            tools:text="Atividade 1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="24dp"
            android:background="@color/divider"
            android:layout_marginRight="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/can_continue"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/back"
                android:textColor="@color/primary_text"
                android:layout_gravity="end"
                android:gravity="right|bottom"
                android:textSize="14sp"
                android:layout_weight="1"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />
            <TextView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/finish_dialog"
                android:textColor="@color/colorAccent"
                android:layout_gravity="end"
                android:gravity="end|bottom"
                android:textSize="14sp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

    </LinearLayout>
</layout>