<?xml version="1.0" encoding="utf-8"?>
<layout>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/txt_title"
        android:fontFamily="sans-serif-medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="left"
        android:text="@string/prize_requested"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/img_check"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/background_circle_red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"/>
    <TextView
        android:id="@+id/txt_congratulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:text="@string/congratulations"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_check"/>
    <TextView
        android:id="@+id/txt_topic_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finished_topic"
        android:gravity="center"
        android:textColor="@color/message_secondary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_congratulation"/>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/txt_topic_finished"/>
    <TextView
        android:id="@+id/txt_prize_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rewards"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/divider"/>
    <TextView
        android:id="@+id/txt_prize_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="+100 Pontos"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txt_prize_header"/>
    <TextView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/colorAccent"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/finish_dialog"
        android:layout_marginTop="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_prize_content"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>
</layout>