<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/retrieve_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="5sp"
            android:text="@string/retrieve_password"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/retrieve_password_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="7sp"
            android:text="@string/retrieve_password_instructions"
            android:textColor="@color/inactive"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/retrieve_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:textColorHint="#61263238"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_instructions">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registered_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#61263238" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/retrieve_password_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/request_new_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_email" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/retrieve_password_done_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/background_circle_red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_title" />

        <TextView
            android:id="@+id/retrieve_password_sent_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/password_recovered_title"
            android:textColor="@color/red_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_done_iv" />

        <TextView
            android:id="@+id/retrieve_password_sent_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="7sp"
            android:text="@string/password_recovered_description"
            android:textColor="@color/inactive"
            android:textSize="14sp"
            android:textStyle="normal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_sent_title" />


        <TextView
            android:id="@+id/retrieve_password_go_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="3sp"
            android:padding="16dp"
            android:text="@string/come_back"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retrieve_password_confirm_btn" />

    </android.support.constraint.ConstraintLayout>
</layout>